fix jUnit